<resources>
    <string name="app_name" translatable="false">BagrutTel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="enter_title">Enter Subject</string>
    <string name="enter_description">Enter question</string>
    <string name="upload">Upload</string>
    <string name="message">Message...</string>
    <string name="group_title">Group Title</string>
    <string name="group_description">Group Description</string>
    <string name="edit_group">Edit Group</string>
    <string name="add_participant">Add Participant</string>
    <string name="leave_group">Leave Group</string>
    <string name="participants_n">Participants (N)</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password_recover">Forgot Password? Recover</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="like">LIKE</string>
    <string name="share">SHARE</string>
    <string name="comment">Comment...</string>
    <string name="comments">Comments</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="post_notifications">Post Notifications</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="add_post">Add Post</string>
    <string name="create_group">Create Group</string>
    <string name="add_group_participant">Add Group Participant</string>
    <string name="group_info">Group Info</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="chats">Chats</string>
    <string name="more">More</string>
    <string name="likes"> Likes</string>
    <string name="commentsAmount">Comments</string>
    <string name="posts">Posts</string>
    <string name="profileUser">Profile</string>
    <string name="usersFragment">Users</string>
    <string name="chatsFragment">Chats</string>
    <string name="chooseAction">Choose Action</string>
    <string name="editProfilePicture">Edit Profile Picture</string>
    <string name="editCoverPhoto">Edit Cover Photo</string>
    <string name="editName">Edit Name</string>
    <string name="editPhone">Edit Phone</string>
    <string name="changePassword">Change Password</string>
    <string name="updatingProfilePicture">Updating Profile Picture</string>
    <string name="updatingCoverPhoto">Updating Cover Photo</string>
    <string name="updatingName">Updating Name</string>
    <string name="updatingPhone">Updating Phone</string>
    <string name="changingPassword">Changing Password</string>
    <string name="enterYourCurrentPassword">Enter your current password...</string>
    <string name="passwordLengthMustBeAtleast6Characters">Password length must be atleast 6 characters...</string>
    <string name="passwordUpdated">Password Updated...</string>
    <string name="update">Update </string>
    <string name="enter">Enter </string>
    <string name="uodate">Update</string>
    <string name="updated">Updated...</string>
    <string name="pleaseEnter">\Please enter \</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="pickImageFrom">Pick Image From</string>
    <string name="enterTitle">Enter title...</string>
    <string name="enterDescription">Enter description...</string>
    <string name="postPublished">Post published</string>
    <string name="addedNewPost"> added new post</string>
    <string name="cameraAndStorageBothPermissionAreNecessary">Camera and Storage both permissions are necessary...</string>
    <string name="storagePermissionIsNecessary">Storage permissions is necessary...</string>
    <string name="cannotSendTheEmptyMesaage">Cannot send the empty message...</string>
    <string name="blockedSuccessfully">Blocked Successfully</string>
    <string name="failed">Failed: </string>
    <string name="unblockedSuccessfully">Unblocked Successfully...</string>
    <string name="cantSendEmptyMessage">Can\'t send empty message...</string>
    <string name="pleaseEnterGroupTitle">Please enter group title...</string>
    <string name="groupCreated">Group created...</string>
    <string name="groupTitleIsRequired">Group title is required...</string>
    <string name="updatingGroupInfo">Updating Group Info...</string>
    <string name="groupInfoUpdated">Group info updated...</string>
    <string name="loginFailed">Login Failed...</string>
    <string name="imageUpdated">Image Updated...</string>
    <string name="errorUpdatingImage">Error Updating Image...</string>
    <string name="someErrorOccured">Some error occurred</string>
    <string name="pleaseEnableCameraAndStoragePermission">Please enable camera and storage permission</string>
    <string name="pleaseEnableStoragePermission">Please enable storage permission</string>
    <string name="youreBlockedByThatUserCantSendMessage">You are blocked by that user,can not send message</string>
    <string name="deletedSuccessfully">Deleted successfully</string>
    <string name="creatorOfGroup">Creator of Group...</string>
    <string name="addedSuccessfully">Added Successfully...</string>
    <string name="theUserIsNowAdmin">The user is now admin...</string>
    <string name="theUserIsNoLongerAdmin">The user is no longer admin...</string>
    <string name="notificationDeleted">Notification deleted...</string>
    <string name="cantDeleteOthersComment">Can\'t delete other\'s comment...</string>
    <string name="messageDeleted">message deleted...</string>
    <string name="youCanDeleteOnlyYourMessages">You can delete only your messages...</string>
    <string name="registred">Registered...\n</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="commentIsEmpty">Comment is empty...</string>
    <string name="commentAdded">Comment Added...</string>
    <string name="emailSent">Email sent</string>
    <string name="groupLeftSuccesfully">Group left Successfully...</string>
    <string name="groupSuccesssfullyDelted">Group successfully deleted...</string>
    <string name="addNewPost">Add New Post</string>
    <string name="updatePost">Update Post</string>
    <string name="chooseImageFrom">Choose image from</string>
    <string name="notifications">Notifications</string>
    <string name="groupChats">Group Chats</string>
    <string name="pickImage">Pick Image</string>
    <string name="pleaseWait">Please wait</string>
    <string name="cameraO">Camera</string>
    <string name="galleryO">Gallery</string>
    <string name="postDetail">Post Detail</string>
    <string name="postLikedBy">Post Liked By</string>
    <string name="createAccount">Create Account</string>
    <string name="delete">Delete</string>
    <string name="areYouSureYouWantToDeleteThisMessage">Are you sure to delete this message?</string>
    <string name="no">No</string>
    <string name="areYouSureYouWantToDeleteThisComment">Are you sure to delete this comment?</string>
    <string name="areYouSureYouWantToDeleteThisNotification">Are you sure to delete this notification?</string>
    <string name="chooseOption">Choose Option</string>
    <string name="addThisUserInThisGroup">Add this user in this group?</string>
    <string name="add">ADD</string>
    <string name="lastSeenAt">Last seen at: </string>
    <string name="cameraOp">Camera</string>
    <string name="galleryOp">Gallery</string>
    <string name="profileS">Profile</string>
    <string name="chat">Chat</string>
    <string name="youWillNotReceivePostNotifications">You will not receive post notifications</string>
    <string name="uSubscriptionFailed">UnSubscription failed</string>
    <string name="youWillRecieveNotifictions">You will receive post notifications</string>
    <string name="subscriptionFailed">Subscription failed</string>
    <string name="edit">Edit</string>
    <string name="viewDetail">View Detail</string>
    <string name="shareVia">Share Via</string>
    <string name="subjectHere">Subject Here</string>
    <string name="liked">Liked</string>
    <string name="deleting">Deleting...</string>
    <string name="deletingPd">Deleting...</string>
    <string name="shareViaI">Share Via</string>
    <string name="shareViaIn">Share Via</string>
    <string name="deletingM">Deleting...</string>
    <string name="likedYourPost">Liked your post</string>
    <string name="addingComment">Adding comment...</string>
    <string name="CommentedOnYourPost">Commented on your post</string>
    <string name="likesS"> Likes</string>
    <string name="commentsS">Comments</string>
    <string name="recover">Recover</string>
    <string name="sendingEmail">Sending email...</string>
    <string name="loggingIn">Logging In...</string>
    <string name="cameraOptions">Camera</string>
    <string name="galleryOptiins">Gallery</string>
    <string name="full_name">Full Name</string>
    <string name="createdBy">Created by </string>
    <string name="on"> on </string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="registeringUser">Registering User...</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="tyoing">typing...</string>
    <string name="online">online</string>
    <string name="sentPhoto">Sent Photo</string>
    <string name="participantP">participant</string>
    <string name="leaveGroup">Leave Group</string>
    <string name="admin">admin</string>
    <string name="creator">creator</string>
    <string name="deleteGroup">Delete Group</string>
    <string name="likeT">LIKE</string>
    <string name="commentT">COMMENT</string>
    <string name="שתף">SHARE</string>
    <string name="commentedonyourpost">Commented on your post</string>
    <string name="commentedonpost">Commented on your post</string>
</resources>
