<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_logout"
    android:title="@string/logout"/>

    <item android:id="@+id/action_settings"
        android:title="@string/settings"/>

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_add_post"
        android:title="@string/add_post"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_white"/>

    <!--only in chatsfragment,user fragment and hide from other-->
    <item android:id="@+id/action_create_group"
        android:title="@string/create_group"
        app:showAsAction="always"
        android:icon="@drawable/ic_creategroup_white" />

    <item android:id="@+id/action_add_participant"
        android:title="@string/add_group_participant"
        app:showAsAction="always"
        android:icon="@drawable/ic_addperson_white" />

    <item android:id="@+id/action_groupinfo"
        android:title="@string/group_info"
        app:showAsAction="always"
        android:icon="@drawable/ic_info_white" />

</menu>