<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/loginTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/login"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"/>

    <!--profile picture-->
    <androidx.cardview.widget.CardView
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginTv"
        android:layout_marginTop="20dp"
        android:id="@+id/pivCV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="250dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorBlack">

        <ImageView
            android:id="@+id/loginIconIv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_login_white" />

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestSV"
        android:layout_below="@id/pivCV"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/pivCV"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL">
        <EditText
            android:id="@+id/emailEt"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--edittext : input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@+id/emailTIL"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/passwordEt"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTIL"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_login_white"
        android:drawablePadding="5dp"/>

    <!--show to recover password-->
    <TextView
        android:id="@+id/recoverPassTv"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:text="@string/forgot_password_recover"
        android:layout_below="@+id/loginBtn"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"/>

    <!--google sign in button-->
    <com.google.android.gms.common.SignInButton
        android:layout_gravity="center"
        android:id="@+id/googleLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/recoverPassTv"
        android:layout_marginTop="5dp">
    </com.google.android.gms.common.SignInButton>

    <!--click to go to register-->
    <TextView
        android:id="@+id/dontHave_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="20dp"/>


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>




</RelativeLayout>