<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.RegisterActivity">




    <TextView
            android:id="@+id/registerTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <!--profile picture-->
        <androidx.cardview.widget.CardView
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/registerTv"
            android:layout_marginTop="20dp"
            android:id="@+id/pivCV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorBlack">

            <ImageView
                android:id="@+id/RegisterIconIv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_register_white_new" />

        </androidx.cardview.widget.CardView>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestSV"
        android:layout_below="@id/pivCV"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@+id/pivCV"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/emailTIL">
                <EditText
                    android:id="@+id/emailEt"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@+id/emailTIL"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/fullNameTIL">
                <EditText
                    android:id="@+id/fullNameEt"
                    android:inputType="textPersonName"
                    android:hint="@string/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/fullNameTIL"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/passwordTIL"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/passwordEt"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/registerBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordTIL"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_register_white_new"
                android:drawablePadding="5dp"
                android:text="@string/register"/>

            <TextView
                android:id="@+id/have_accountTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerBtn"
                android:layout_marginTop="20dp"
                android:text="@string/already_have_an_account_login"
                android:textAlignment="center"
                android:textColor="@color/colorBlack" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</RelativeLayout>