<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PostDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_above="@+id/commentsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Actual post-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:contentPadding="5dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/profileLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <!--profile picture-->
                        <androidx.cardview.widget.CardView
                            android:scaleType="centerCrop"
                            android:id="@+id/pivCV"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:cardCornerRadius="250dp"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/colorBlack">

                            <ImageView
                                android:id="@+id/uPictureIv"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_default_img_white" />

                        </androidx.cardview.widget.CardView>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/uNameTv"
                                android:text="Name"
                                android:textColor="@color/colorBlack"
                                android:textSize="20sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:id="@+id/pTimeTv"
                                android:text="33 min"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/moreBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:src="@drawable/ic_more_black"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/pTitleTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="Title"
                        android:autoLink="all"/>
                    <TextView
                        android:id="@+id/pDescriptionTv"
                        android:text="The description of the post"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"/>
                    <ImageView
                        android:id="@+id/pImageIv"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="fitCenter"
                        android:background="@color/colorWhite"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/pLikesTv"
                            android:text="1.2k Likes"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/pCommentsTv"
                            android:text="1.2k Comments"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"/>

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F5F0F0"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <Button
                            android:id="@+id/likeBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/like"
                            android:drawableStart="@drawable/ic_like_black"
                            android:background="@color/colorWhite"
                            android:drawablePadding="5dp"/>

                        <Button
                            android:id="@+id/shareBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/colorWhite"
                            android:drawableStart="@drawable/ic_share_black"
                            android:drawablePadding="5dp"
                            android:text="@string/share" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--list of comments-->
            <TextView
                android:text="@string/comments"
                android:textColor="@color/colorBlack"
                android:drawablePadding="5dp"
                android:padding="2dp"
                android:drawableStart="@drawable/ic_comments_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/commentsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <!--profile picture-->
        <androidx.cardview.widget.CardView
            android:scaleType="centerCrop"
            android:id="@+id/pivCV2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorBlack">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/cAvatarIv"
                android:src="@drawable/ic_default_img_white"/>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/commentEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pivCV2"
            android:layout_toStartOf="@+id/sendBtn"
            android:background="@color/colorWhite"
            android:padding="10dp"
            android:hint="@string/comment"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_centerVertical="true"
            android:layout_margin="1dp"/>

        <ImageButton
            android:id="@+id/sendBtn"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_send"
            android:layout_centerVertical="true"
            android:background="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>